[package]
name = "relm4ex"
version = "0.1.0"
edition = "2021"

[dependencies]
pango = "0.17.0"
gdk4 = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.relm4]
relm4 = "0.6.0-alpha.1"
relm4-components = "0.6.0-alpha.1"

# [dependencies.gtk4]
# version = "0.5.5"
# features = ["v4_6"]
#
# [dependencies.libadwaita]
# version = "0.2.1"
# features = ["v1_2"]
